--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -2444,13 +2444,13 @@
 	<key>NSWindow Frame SessionsPreferences</key>
 	<string>269 139 606 456 0 0 1440 877 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>0 404 796 473 0 0 1440 877 </string>
+	<string>0 391 796 486 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 158 1210 715 0 0 1440 877 </string>
+	<string>115 120 1210 715 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 162 1210 715 0 0 1440 877 </string>
+	<string>151 106 1210 715 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>1162 524 1225 715 0 0 2560 1417 </string>
+	<string>1495 713 1225 715 0 0 3008 1669 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
 	<string>1460 370 1225 692 0 0 3008 1669 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
@@ -3340,6 +3340,8 @@
 	<integer>0</integer>
 	<key>WordCharacters</key>
 	<string>/-+\~_.</string>
+	<key>disableMetalWhenUnplugged</key>
+	<true/>
 	<key>findIgnoreCase_iTerm</key>
 	<true/>
 	<key>findMode_iTerm</key>
@@ -3347,6 +3349,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.1.7</string>
+	<string>3.2.0</string>
 </dict>
 </plist>
