--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -4804,7 +4804,7 @@
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>155 593 592 584 0 0 1920 1177 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>98 127 2167 1162 0 0 2560 1417 </string>
+	<string>314 298 2203 987 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>-1680 0 1680 1027 -1680 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -5849,7 +5849,7 @@
 	<key>NoSyncLastTipTime</key>
 	<real>612231340.66235006</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>62</integer>
+	<integer>67</integer>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -6689,7 +6689,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2020-05-29T00:17:19Z</date>
+	<date>2020-06-04T22:21:20Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SUUpdateGroupIdentifier</key>
@@ -6703,7 +6703,7 @@
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>ShowNewOutputIndicator</key>
 	<true/>
 	<key>ShowPaneTitles</key>
