--- a/.gitconfig
+++ b/.gitconfig
@@ -33,7 +33,7 @@
 	gpgsign = true
 
 [sequence]
-	editor = interactive-rebase-tool
+	# editor = interactive-rebase-tool
 
 [pull]
 	ff = only
@@ -47,3 +47,6 @@
 	helper = osxkeychain
 [url "git@github.com:"]
 	pushInsteadOf = https://github.com/
+
+[log]
+    date = iso-local
