add karabiner config file
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -5874,7 +5874,7 @@
 	<key>ShowBookmarkName</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<true/>
+	<false/>
 	<key>ShowNewOutputIndicator</key>
 	<true/>
 	<key>ShowPaneTitles</key>
