bat pager + zsh demo func + iterm size sync
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -5109,7 +5109,7 @@
 			<key>Disable Window Resizing</key>
 			<true/>
 			<key>Flashing Bell</key>
-			<true/>
+			<false/>
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
