--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
 	program = gpg
 
 [core]
-	pager = delta
+	pager = diff-so-fancy | less --tabs=4 -RFX
 	editor = vim
 	excludesfile = /Users/ahmetb/.gitignore_global
 
@@ -46,3 +46,17 @@
 
 [log]
     date = iso-local
+[color]
+	ui = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 227
+	frag = magenta bold
+	commit = 227 bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
