--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -3,3 +3,12 @@
 # allowing the gpg key's passphrase to be stored in the login
 # keychain, enabling automatic key signing.
 pinentry-program /usr/local/bin/pinentry-mac
+
+# make ssh-agent and gpg-agent work together
+enable-ssh-support
+write-env-file
+use-standard-socket
+
+default-cache-ttl 600
+max-cache-ttl 7200
+
