--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 	program = gpg
 
 [core]
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = diff-so-fancy | less --tabs=4 -RFX --mouse
 	editor = vim
 	excludesfile = /Users/ahmet/.gitignore_global
 
