--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -2,10 +2,11 @@
 # pinentry program from GPGtools. This is the OSX 'magic sauce',
 # allowing the gpg key's passphrase to be stored in the login
 # keychain, enabling automatic key signing.
-pinentry-program /usr/local/bin/pinentry-mac
+
+# pinentry-program /usr/local/bin/pinentry-mac
 
 # make ssh-agent and gpg-agent work together
-enable-ssh-support
+# enable-ssh-support
 
 default-cache-ttl 600
 max-cache-ttl 7200
