--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 	program = gpg
 
 [core]
-	pager = diff-so-fancy | less --tabs=4 -RFX --mouse
+	pager = delta
 	editor = vim
 	excludesfile = /Users/ahmet/.gitignore_global
 
@@ -60,3 +60,5 @@
 	postBuffer = 524288000
 [credential "https://github.com"]
 	helper = !/usr/local/bin/gh auth git-credential
+[commit]
+	# template = /Users/ahmet/.arc-commit-template.txt
